syntax = "proto3";

package get_info;

//Statistics Data of key
message Stat{
    double rps = 1; //request per second
    //TODO
}

message GetReq{
    string group=1;
    string key=2;
}

message GetRes{
    bool status=1;
    bytes value = 2;
    Stat stat=3;
}

message SetReq {
    string group = 1;
    string key = 2;
    bytes value = 3;
}

message SetRes {
    bool status = 1;
    Stat stat=2;
}

message DelReq {
    string group = 1;
    string key = 2;
}

message DelRes {
    bool status = 1;
    bytes value = 2;
    Stat stat=3;
}

message RegisterReq{
    string addr=1;
}

message RegisterRes{
    bool status=1;
}

message UnregisterReq{
    string addr=1;
}

message UnregisterRes{
    bool status=1;
}

message SyncSrvTableReq{
    bytes srv_table=1;
}

message SyncSrvTableRes{
    bool status=1;
    bytes srv_table=1;
}

service CacheServ{
    rpc Get(GetReq) returns (GetRes) {} 
    rpc Set(SetReq) returns (SetRes) {}
    rpc Del(DelReq) returns (DelRes) {}

    rpc Register(RegisterReq) returns (RegisterRes) {}
    rpc Unregister(UnregisterReq) returns (UnregisterRes) {}  
    rpc SyncSrvTable(SyncSrvTableReq) returns (SyncSrvTableRes) {}
}

